# lrvm

./: .rustfmt.toml  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
benches/: lrvmbench.rs
docs/examples/: counting_loop.iasm  hlt.iasm
src/: instruction.rs  lib.rs  main.rs  vm.rs
src/assembler/: assembler_errors.rs  directive_parsers.rs  instruction_parsers.rs  label_parsers.rs  mod.rs  opcode_parsers.rs  operand_parser.rs  program_parser.rs  register_parser.rs  symbols.rs
src/cli/: mod.rs
src/cluster/: client.rs  manager.rs  message.rs  server.rs
src/remote/: client.rs  server.rs
src/repl/: mod.rs
src/scheduler/: mod.rs
src/util/: display.rs
